# 2084-game

./: README.md  build.gradle  local.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/a2048game/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/a2048game/: GameBoardView.kt  MainActivity.kt
app/src/main/res/drawable/: ic_2048_logo.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  game_over_dialog.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/a2048game/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
